[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openpaygo"
version = "0.6.0"
description = "OpenPAYGO Python library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"
license = { text = "MIT License" }
keywords = ["paygo"]

authors = [
  { name = "EnAccess" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Unix",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Utilities",
]

dependencies = [
  "siphash>=0.0.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0.1",
]

[project.urls]
Homepage = "https://enaccess.github.io/OpenPAYGO-docs/"
Documentation = "https://enaccess.github.io/OpenPAYGO-docs/"
Changes = "https://github.com/EnAccess/OpenPAYGO-python/releases"
Source = "https://github.com/EnAccess/OpenPAYGO-python/"
Issues = "https://github.com/EnAccess/OpenPAYGO-python/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
# Add some rules to ruff's default:
# - isort: https://docs.astral.sh/ruff/rules/#isort-i
# - pep8-naming: https://docs.astral.sh/ruff/rules/#pep8-naming-n
select = ["E", "F", "I", "N"]

# Same as Black.
line-length = 88
