[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "openpaygo"
version = "0.6.1"
description = "OpenPAYGO Python library"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

authors = [
  { name = "EnAccess", email = "info@enaccess.org" }
]

keywords = [
  "paygo",
  "open-paygo"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: Unix",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Utilities",
]

requires-python = ">=3.9"

dependencies = [
  "siphash>=0.0.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0.1",
]

[project.urls]
homepage = "https://enaccess.github.io/OpenPAYGO-docs/"
source = "https://github.com/EnAccess/OpenPAYGO-python/"
changelog = "https://github.com/EnAccess/OpenPAYGO-python/releases"
releasenotes = "https://github.com/EnAccess/OpenPAYGO-python/releases"
documentation = "https://enaccess.github.io/OpenPAYGO-docs/"
issues = "https://github.com/EnAccess/OpenPAYGO-python/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
# Add some rules to ruff's default:
# - isort: https://docs.astral.sh/ruff/rules/#isort-i
# - pep8-naming: https://docs.astral.sh/ruff/rules/#pep8-naming-n
select = ["E", "F", "I", "N"]

# Same as Black.
line-length = 88
