[metadata]
name = openpaygo
version = 0.5.2
description = OpenPAYGO library in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EnAccess/OpenPAYGO-python/
# author = EnAccess Fundation
# author_email = info@enaccess.org
license =  MIT License
license_files = LICENSE
project_urls =
    Homepage = https://enaccess.org/materials/openpaygotoken/
    # Documentation = https://github.com/EnAccess/OpenPAYGO-python/
    Changes = https://github.com/EnAccess/OpenPAYGO-python/releases
    Source = https://github.com/EnAccess/OpenPAYGO-python/
    Issue Tracker = https://github.com/EnAccess/OpenPAYGO-python//issues
    Twitter = https://twitter.com/EnAccessFdn
    Chat = https://community.enaccess.org/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
keywords =
    paygo

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    siphash >= 0.0.1
