[metadata]
name = openpaygo
version = 0.5.3
description = OpenPAYGO library in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EnAccess/OpenPAYGO-python/
license =  MIT License
license_files = LICENSE
project_urls =
    Homepage = https://github.com/EnAccess/OpenPAYGO-python/
    Documentation = https://github.com/EnAccess/OpenPAYGO-python/
    Changes = https://github.com/EnAccess/OpenPAYGO-python/releases
    Source = https://github.com/EnAccess/OpenPAYGO-python/
    Issues = https://github.com/EnAccess/OpenPAYGO-python/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
keywords =
    paygo

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    siphash >= 0.0.1
